--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Soft Landing</div>
+        <div class="logo">DesignIgnitivus</div>
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
